--- a/styles.css
+++ b/styles.css
@@ -68,12 +68,13 @@ a, button {
   max-inline-size: 1440px;
   margin-inline: auto;
   padding-inline: var(--spacing-200); /* 16px - mobile default */
+  margin-block-start: var(--spacing-350);
+
+  display: grid;
+  row-gap: var(--spacing-400);
 }
 
 /* ===== HEADER ===== */
-.header {
-  padding-block-start: var(--spacing-350);
-}
 
 .header-content {
   display: flex;
@@ -119,7 +120,6 @@ a, button {
 .main {
   display: grid;
   gap: var(--spacing-800);
-  margin-block-start: var(--spacing-400); /* 32px - mobile default */
 }
 
 /* ===== HERO SECTION ===== */
@@ -369,7 +369,6 @@ a, button {
   .main {
     display: grid;
     gap: var(--spacing-500);
-    margin-block-start: var(--spacing-350); /* 28px - tablet block-start margin */
   }
   
   .menu-dialog {
@@ -447,12 +446,10 @@ a, button {
 @media (min-width: 1024px) {
   .container {
     padding-inline: var(--spacing-1400); /* 164px - desktop inline margin */
+    margin-block-start: var(--spacing-1100);
+    gap: var(--spacing-800);
   }
 
-  .header {
-    margin-block-start: var(--spacing-1100);
-  }
-  
   .main {
     grid-template-columns: 1fr 350px;
     grid-template-areas: 
